# Computer-Networks

./: CMakeLists.txt  client.cpp  server.cpp
Classes/: Helpers.cpp  Helpers.h  JSONMethods.cpp  JSONMethods.h  RegLog.cpp  RegLog.h  XMLWorkAround.cpp  XMLWorkAround.h
DataBases/: Trains.XML  Users.JSON
